Component Styling to isolate

--- a/src/Style/Display.css
+++ b/src/Style/Display.css
@@ -1,24 +1,24 @@
-.App {
+.Display {
   text-align: center;
 }
 
-.App-logo {
+.Display-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
+.Display-header {
+  background-color: #287;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.Display-title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.Display-intro {
   font-size: large;
 }
 
