--- a/src/Style/Search.css
+++ b/src/Style/Search.css
@@ -1,33 +1,33 @@
-.Header {
+.Search {
     text-align: center;
   }
   
-  .Head {
+  .Search-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
   }
   
-  .Header-header {
-    background-color: rgb(196, 8, 221);
+  .Search-header {
+    background-color: rgb(136, 133, 34);
     height: 150px;
     padding: 20px;
     color: white;
   }
   
-  .Header-title {
+  .Search-title {
     font-size: 1.5em;
   }
   
-  .Header-intro {
+  .Search-intro {
     font-size: large;
   }
   
-  /* @keyframes App-logo-spin {
+  @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
     }
     to {
       transform: rotate(360deg);
     }
-  } */
+  }
   
