--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -11,8 +11,11 @@ a {
   color: #e74c3c !important;
 }
 
-button:focus {
-  outline: none;
+button:hover {
+  color: white;
+  cursor: pointer;
+  background-color: #2c3e50;
+
 }
 
 .App {
@@ -22,7 +25,7 @@ button:focus {
 .App-header {
 
   background-color: #2c3e50;
-  height: 140px;
+  height: 100px;
   padding: 30px;
   color: white;
   margin-bottom: 10 auto;
@@ -95,12 +98,15 @@ button:focus {
   background: transparent;
   padding: 0.2rem 0.9rem;
   margin: 0 0.2rem;
-  border-radius: 1px;
+  border-radius: 5px;
   font-size: 1rem;
   text-transform: uppercase;
   font-weight: 500;
   margin-left: 0.7rem;
+  margin-top: 1rem;
 }
+
+
 
 input[type="text"] {
   outline: none;
